--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,13 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.79"
 itertools = "0.12.1"
-kalosm = { git = "https://github.com/floneum/floneum", version = "0.1.0" }
+kalosm = { git = "https://github.com/floneum/floneum", version = "0.2.0" }
 tokio = "1.34.0"
 ron = "0.8.1"
 serde = { version = "1.0.193", features = ["derive"] }
 
+[features]
+metal = ["kalosm/metal"]
 
 [profile.dev.package."*"]
 opt-level = 3
